font fix, line spacing
font should be fixed and line height was added.

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
   
   body{
     background-color:#F5F5F5;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     color: slategray;
   }
   
@@ -42,6 +42,7 @@
    
   
   }
+
   
 
   /*layout*/
@@ -58,7 +59,7 @@
       padding:0 10px 0px 10px;
   
     }
-    #first-paragraph {
+    #intro-paragraph {
       padding:5px 35px 0 35px;
       line-height: 1.8rem;
     }
@@ -76,7 +77,7 @@
     border-radius: 10px;
   
   }
-  .portfolio-contain p{
+  .portfolio-contain p {
     line-height:30px;
   }
   .up-nav ul, li{
@@ -115,6 +116,10 @@
   
   .bottom-nav li {
     margin-top: 2%;
+  }
+
+  .content-start p{
+    line-height: 2rem;
   }
   @media (min-width:768px) {
   .up-ul-nav ul{
